--- a/Ancient Realms/.vscode/settings.json
+++ b/Ancient Realms/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Ancient Realms.sln"
+    "dotnet.defaultSolution": "Ancient Realms.sln",
+    "dotnet.preferCSharpExtension": true
 }
